[gd_scene load_steps=36 format=3 uid="uid://c0prijgr1rv2l"]

[ext_resource type="Texture2D" uid="uid://cmk55ur05abkw" path="res://veh/car blue/idle/0001.png" id="1_fnel6"]
[ext_resource type="Script" path="res://veh/script/car.gd" id="1_njeoo"]
[ext_resource type="Texture2D" uid="uid://ii4xgtn3suvg" path="res://veh/car blue/move/0001.png" id="2_p3jlt"]
[ext_resource type="Texture2D" uid="uid://djpd25pwallw8" path="res://char scene/shadow.png" id="2_talyw"]
[ext_resource type="Texture2D" uid="uid://c326txfern7hp" path="res://veh/car blue/move/0002.png" id="3_n7lvo"]
[ext_resource type="Texture2D" uid="uid://msu85gex748b" path="res://veh/car blue/move/0003.png" id="4_fwr4m"]
[ext_resource type="Texture2D" uid="uid://7e17768fl2ap" path="res://veh/car blue/move/0004.png" id="5_gcdaj"]
[ext_resource type="Texture2D" uid="uid://bjhjxvq33n6r8" path="res://veh/car blue/dwon/0001.png" id="5_jqj7n"]
[ext_resource type="Texture2D" uid="uid://b0vr7p28cewu1" path="res://veh/car blue/dwon/0002.png" id="6_meuon"]
[ext_resource type="Texture2D" uid="uid://434wslgvde28" path="res://veh/car blue/move/0005.png" id="6_mkns1"]
[ext_resource type="Texture2D" uid="uid://bcl6oq48ww0jd" path="res://veh/car blue/dwon/0003.png" id="7_1kp87"]
[ext_resource type="Texture2D" uid="uid://bskf7wqsafqro" path="res://veh/car blue/move/0006.png" id="7_xrjx6"]
[ext_resource type="Texture2D" uid="uid://bfvpcjnt1thsn" path="res://veh/car blue/dwon/0004.png" id="8_1b40e"]
[ext_resource type="Texture2D" uid="uid://fs4udapds47c" path="res://veh/car blue/move/0007.png" id="8_mg84r"]
[ext_resource type="Texture2D" uid="uid://dknrjpf6mxtxy" path="res://veh/car blue/move/0008.png" id="9_malam"]
[ext_resource type="Texture2D" uid="uid://xfb2h02a20io" path="res://veh/car blue/dwon/0005.png" id="9_spcu1"]
[ext_resource type="Texture2D" uid="uid://dqsu7kwy126vi" path="res://veh/car blue/dwon/0006.png" id="10_wn3oe"]
[ext_resource type="Texture2D" uid="uid://begt7h836uh8o" path="res://uibtn/GUI.png" id="11_qvhvw"]
[ext_resource type="Texture2D" uid="uid://cfe0utmunhb3v" path="res://veh/car blue/dwon/0007.png" id="11_u6vha"]
[ext_resource type="FontFile" uid="uid://b07xmv84cnmcm" path="res://fonts/m6x11.ttf" id="12_1wm4q"]
[ext_resource type="Texture2D" uid="uid://h141ea76wksc" path="res://veh/car blue/dwon/0008.png" id="12_lfffs"]
[ext_resource type="Texture2D" uid="uid://cp7jn1yyx0kax" path="res://veh/car blue/up/0001.png" id="21_4khn0"]
[ext_resource type="Texture2D" uid="uid://bf7o7vh0w0ub2" path="res://veh/car blue/up/0002.png" id="22_rtdde"]
[ext_resource type="Texture2D" uid="uid://dr0lapl83f63a" path="res://veh/car blue/up/0003.png" id="23_65xuq"]
[ext_resource type="Texture2D" uid="uid://b58oewgd30wkg" path="res://veh/car blue/up/0004.png" id="24_76ygq"]
[ext_resource type="Texture2D" uid="uid://bm5s675ymmnod" path="res://veh/car blue/up/0005.png" id="25_u4bt0"]
[ext_resource type="Texture2D" uid="uid://22fruomfvjbv" path="res://veh/car blue/up/0006.png" id="26_bvpa5"]
[ext_resource type="Texture2D" uid="uid://bvxwape12xvna" path="res://veh/car blue/up/0007.png" id="27_e450v"]
[ext_resource type="Texture2D" uid="uid://eq543aoar8bq" path="res://veh/car blue/up/0008.png" id="28_oumgp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t3hbk"]
atlas = ExtResource("11_qvhvw")
region = Rect2(112.754, 80.9464, 30.3863, 14.1342)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0l12"]
atlas = ExtResource("11_qvhvw")
region = Rect2(112.987, 97.9401, 30.0222, 13.1178)

[sub_resource type="SpriteFrames" id="SpriteFrames_k87m4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_jqj7n")
}, {
"duration": 1.0,
"texture": ExtResource("6_meuon")
}, {
"duration": 1.0,
"texture": ExtResource("7_1kp87")
}, {
"duration": 1.0,
"texture": ExtResource("8_1b40e")
}, {
"duration": 1.0,
"texture": ExtResource("9_spcu1")
}, {
"duration": 1.0,
"texture": ExtResource("10_wn3oe")
}, {
"duration": 1.0,
"texture": ExtResource("11_u6vha")
}, {
"duration": 1.0,
"texture": ExtResource("12_lfffs")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_fnel6")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_p3jlt")
}, {
"duration": 1.0,
"texture": ExtResource("3_n7lvo")
}, {
"duration": 1.0,
"texture": ExtResource("4_fwr4m")
}, {
"duration": 1.0,
"texture": ExtResource("5_gcdaj")
}, {
"duration": 1.0,
"texture": ExtResource("6_mkns1")
}, {
"duration": 1.0,
"texture": ExtResource("7_xrjx6")
}, {
"duration": 1.0,
"texture": ExtResource("8_mg84r")
}, {
"duration": 1.0,
"texture": ExtResource("9_malam")
}],
"loop": true,
"name": &"move",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_4khn0")
}, {
"duration": 1.0,
"texture": ExtResource("22_rtdde")
}, {
"duration": 1.0,
"texture": ExtResource("23_65xuq")
}, {
"duration": 1.0,
"texture": ExtResource("24_76ygq")
}, {
"duration": 1.0,
"texture": ExtResource("25_u4bt0")
}, {
"duration": 1.0,
"texture": ExtResource("26_bvpa5")
}, {
"duration": 1.0,
"texture": ExtResource("27_e450v")
}, {
"duration": 1.0,
"texture": ExtResource("28_oumgp")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s867d"]
size = Vector2(123, 66)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yj3a4"]
size = Vector2(96, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5c08d"]
size = Vector2(97, 14)

[node name="carblue" type="CharacterBody2D"]
collision_layer = 128
script = ExtResource("1_njeoo")

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(-12, -7)
scale = Vector2(1.08691, 0.98641)
texture_normal = SubResource("AtlasTexture_t3hbk")
texture_pressed = SubResource("AtlasTexture_y0l12")

[node name="enterlab" type="Label" parent="TouchScreenButton"]
offset_left = 4.60019
offset_top = 2.02756
offset_right = 79.6002
offset_bottom = 25.0276
scale = Vector2(0.598934, 0.598934)
theme_override_colors/font_color = Color(0.815857, 0.773463, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.176471)
theme_override_fonts/font = ExtResource("12_1wm4q")
text = "Enter"

[node name="exitlab" type="Label" parent="TouchScreenButton"]
visible = false
offset_left = 8.28035
offset_top = 2.02755
offset_right = 83.2804
offset_bottom = 25.0276
scale = Vector2(0.598934, 0.598934)
theme_override_colors/font_color = Color(0.815857, 0.773463, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.176471)
theme_override_fonts/font = ExtResource("12_1wm4q")
text = "Exit"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(6, -5)
sprite_frames = SubResource("SpriteFrames_k87m4")
animation = &"move"

[node name="Shadowrl" type="Sprite2D" parent="AnimatedSprite2D"]
self_modulate = Color(1, 1, 1, 0.611765)
show_behind_parent = true
position = Vector2(-7, -7)
scale = Vector2(0.584609, 0.315832)
texture = ExtResource("2_talyw")

[node name="Shadowud" type="Sprite2D" parent="AnimatedSprite2D"]
visible = false
self_modulate = Color(1, 1, 1, 0.611765)
show_behind_parent = true
position = Vector2(-1, -12)
rotation = 1.5708
scale = Vector2(0.401985, 0.312799)
texture = ExtResource("2_talyw")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(6, -5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-5, -7)
scale = Vector2(1.05538, 1.1003)
shape = SubResource("RectangleShape2D_s867d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -3)
rotation = -3.14159
shape = SubResource("RectangleShape2D_yj3a4")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0.5, -3)
shape = SubResource("RectangleShape2D_5c08d")

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
